# xkeysym

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: CI.yml  test.yml
examples/: x11rb.rs
keysym-generator/: Cargo.toml  README.md
keysym-generator/src/: main.rs
src/: automatically_generated.rs  lib.rs
