[package]
name = "xkeysym"
version = "0.1.0"
edition = "2018"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A library for working with X11 keysyms"
repository = "https://github.com/notgull/xkeysym"
license = "BSL-1.0"
keywords = ["x11", "keysym", "keysyms"]
rust-version = "1.32.0"

[dev-dependencies]
bytemuck = "1.12.3"
x11rb = "0.11.0"

[workspace]
members = [
    "keysym-generator",
]
